@@ -6,77 +6,73 @@ import ru.practicum.shareit.exception.AccessDeniedException;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.mapper.ItemMapper;
 import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.user.dto.UserDto;
-import ru.practicum.shareit.user.mapper.UserMapper;
-import ru.practicum.shareit.user.service.UserService;
+import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.service.UserServiceImpl;
 
-import java.util.*;
-import java.util.concurrent.atomic.AtomicLong;
+import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
-/**
- * Реализация сервиса вещи.
- */
 @Service
 public class ItemServiceImpl implements ItemService {
-    private final Map<Long, Item> items = new HashMap<>();
-    private final AtomicLong itemIdSequence = new AtomicLong(0);
-    private final UserService userService;
+    private final ItemRepository itemRepository;
+    private final UserServiceImpl userService;
 
     @Autowired
-    public ItemServiceImpl(UserService userService) {
+    public ItemServiceImpl(ItemRepository itemRepository, UserServiceImpl userService) {
+        this.itemRepository = itemRepository;
         this.userService = userService;
     }
 
     @Override
     public ItemDto addItem(Long userId, ItemDto itemDto) {
-        UserDto ownerDto = userService.getUserById(userId);
-        if (ownerDto == null) {
-            throw new NoSuchElementException("User not found");
-        }
+        User owner = userService.getUserEntityById(userId);
 
         Item item = ItemMapper.toItem(itemDto);
-        item.setId(itemIdSequence.incrementAndGet());
-        item.setOwner(UserMapper.toUser(ownerDto));
-        items.put(item.getId(), item);
-        return ItemMapper.toItemDto(item);
+        item.setOwner(owner);
+
+        Item savedItem = itemRepository.save(item);
+        return ItemMapper.toItemDto(savedItem);
     }
 
     @Override
     public ItemDto updateItem(Long userId, Long itemId, ItemDto itemDto) {
-        Item item = items.get(itemId);
-        if (item == null) {
-            throw new NoSuchElementException("Item not found");
-        }
+        Item item = getItemEntityById(itemId);
+
         if (!item.getOwner().getId().equals(userId)) {
             throw new AccessDeniedException("Only owner can update the item");
         }
-        if (itemDto.getName() != null && !itemDto.getName().isBlank()) {
+
+        if (itemDto.getName() != null) {
             item.setName(itemDto.getName());
         }
-        if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank()) {
+        if (itemDto.getDescription() != null) {
             item.setDescription(itemDto.getDescription());
         }
         if (itemDto.getAvailable() != null) {
             item.setAvailable(itemDto.getAvailable());
         }
-        return ItemMapper.toItemDto(item);
+
+        Item updatedItem = itemRepository.save(item);
+        return ItemMapper.toItemDto(updatedItem);
     }
 
     @Override
     public ItemDto getItemById(Long itemId) {
-        Item item = items.get(itemId);
-        if (item == null) {
-            throw new NoSuchElementException("Item not found");
-        }
+        Item item = getItemEntityById(itemId);
         return ItemMapper.toItemDto(item);
+    }
+
+    public Item getItemEntityById(Long itemId) {
+        return itemRepository.findById(itemId)
+                .orElseThrow(() -> new NoSuchElementException("Item not found"));
     }
 
     @Override
     public List<ItemDto> getUserItems(Long userId) {
-        return items.values()
-                .stream()
-                .filter(item -> item.getOwner().getId().equals(userId))
+        List<Item> items = itemRepository.findByOwnerId(userId);
+        return items.stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
@@ -84,18 +80,10 @@ public class ItemServiceImpl implements ItemService {
     @Override
     public List<ItemDto> searchItems(String text) {
         if (text == null || text.isBlank()) {
-            return Collections.emptyList();
+            return List.of();
         }
-        String query = text.toLowerCase();
-        return items.values()
-                .stream()
-                .filter(item -> Boolean.TRUE.equals(item.getAvailable()))
-                .filter(item -> {
-                    String name = item.getName();
-                    String description = item.getDescription();
-                    return (name != null && name.toLowerCase().contains(query)) ||
-                            (description != null && description.toLowerCase().contains(query));
-                })
+        List<Item> items = itemRepository.search(text);
+        return items.stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
